# keepstack

./: .gitignore  ARCHITECTURE.md  CASE-STUDY.md  CHANGELOG.md  COMPARISON.md  CONTRIBUTING.md  DESIGN.md  DEVLOG.md  Dockerfile  README.md  RESEARCH.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: DAM-101.md  index.html
docs/decisions/: ADR-0001-sqlite-over-a-database-server.md  ADR-0002-content-addressable-storage.md  ADR-0003-zero-build-frontend.md  ADR-0004-optional-offline-ai.md  ADR-0005-standards-as-core.md  README.md
docs/research/: enterprise-government-dams.md  features-standards-ai-compliance.md  open-source-dams.md
keepstack/: __init__.py  __main__.py  ai.py  app.py  audit.py  auth.py  config.py  db.py  ingest.py  metadata.py  ocr.py  search.py  seed.py  standards.py  storage.py  thumbnails.py  vision.py
tests/: test_core.py
web/: app.js  index.html  styles.css
