[project]
name = "keepstack"
version = "0.1.0"
description = "A free, open-source, AI-native digital asset management system built to archival and government-grade standards."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kevin Yu", email = "noreply@example.org" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
ai-local = ["onnxruntime>=1.17"]

[project.scripts]
keepstack = "keepstack.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["keepstack"]
